correção tamanho de imagens

--- a/siteandroid/index.html
+++ b/siteandroid/index.html
@@ -37,6 +37,7 @@
             </p>
             
             <picture>
+                <source media="(max-width: 500px)" srcset="./imagens/dan-droids-mini.png">
                 <source media="(max-width: 820px)" srcset="./imagens/dan-droids-pq.png">
                 <img src="imagens/dan-droids.png" alt="Imgagem mascote do android">
             </picture>
@@ -52,6 +53,7 @@
             </p>
             
             <picture>
+                <source media="(max-width: 500px)" srcset="./imagens/irina-blok-mini.jpg">
                 <source media="(max-width: 820px)" srcset="./imagens/irina-blok-pq.jpg">
                 <img src="imagens/irina-blok.jpg" alt="Criadora do Bugdroid">
             </picture>
